--- a/service.yml
+++ b/service.yml
@@ -112,7 +112,7 @@ build:
   templates:
   - name: boilerplate
     title: Next.js Boilerplate
-    repo: https://github.com/vercel/next.js
+    repo: https://github.com/ixartz/Next-js-Boilerplate
     tag: ^14
     pipeline: pipeline.yml
 
