--- a/pipeline.yml
+++ b/pipeline.yml
@@ -19,8 +19,10 @@ jobs:
 
       - run: wodby ci run -s node -- npm i
       - cache_save:
-        key: 'npm-{{ hash "package-lock.json" }}-v1'
-        path: node_modules
+          key: 'npm-{{ hash "package-lock.json" }}-v1'
+          path: node_modules
+
+      - run: wodby ci run -s node -- npm run build
 
       - run: wodby ci build node
       - run: wodby ci release
