--- a/service.yml
+++ b/service.yml
@@ -10,6 +10,8 @@ options:
 - version: '22'
   default: true
   eol: '2027-04-30T00:00:00+00:00'
+- version: '20'
+  eol: '2026-04-30T00:00:00+00:00'  
 containers:
 - name: php
   image: wodby/node
